--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -1,11 +1,10 @@
-
-ftp.server.ip=你的FTP服务器ip地址
+ftp.server.ip=172.16.231.161
 ftp.user=ftpuser
 ftp.pass=tangyang
-ftp.server.http.prefix=http://img.happymmall.com/
+ftp.server.http.prefix=http://img.minos.com/
 
 
-alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
+alipay.callback.url=http://www.minos.com/order/alipay_callback.do
 
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
