--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -1,7 +1,7 @@
 ftp.server.ip=172.16.231.161
 ftp.user=ftpuser
 ftp.pass=tangyang
-ftp.server.http.prefix=http://img.minos.com/
+ftp.server.http.prefix=http://image.minos.com/
 
 
 alipay.callback.url=http://www.minos.com/order/alipay_callback.do
